spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -87,23 +87,23 @@ html {
 
 .hello {
     list-style-type: none;
-    line-height: 5em;
+    line-height: 2;
     border-radius: 3em;
     text-decoration: none;
     text-align: center;
     text-transform: capitalize;
     display: block;
     background-color: none;
-    position: absolute;
     font-weight: lighter;
-    top: 295px;
+    margin: 15px 0 0;
     color: black;
-    left: calc(50% - 263px);
+    padding: 0;
+    z-index: 1000;
+    position: relative;
 }
 
-.hello ul, li {
+.hello li {
     display: inline-block;
-    padding: 0;
     margin: 0 auto;
 }
 
@@ -165,11 +165,11 @@ html {
 .stitches {
     width: 200px;
     position: absolute;
-    -webkit-animation: rotate 30s infinite;
-    animation: rotate 30s infinite;
+    -webkit-animation: rotate 30s linear infinite;
+    animation: rotate 30s linear infinite;
 }
 
-@keyframes rotate {
+@-webkit-keyframes rotate {
     from {
     -webkit-transform: rotate(0deg);
     }
